--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,23 @@
-click==6.6
-Flask==0.11.1
-itsdangerous==0.24
-Jinja2==2.8
-MarkupSafe==0.23
-nltk==3.2.1
-oauthlib==2.0.0
-requests==2.11.1
-requests-oauthlib==0.7.0
-six==1.10.0
-textblob==0.11.1
-tweepy==3.5.0
-Werkzeug==0.11.11
-gunicorn==19.9.0
+certifi==2020.4.5.1
+chardet==3.0.4
+click==7.1.2
+Flask==1.1.2
+gunicorn==20.0.4
+idna==2.9
+itsdangerous==1.1.0
+Jinja2==2.11.2
+joblib==0.15.0
+MarkupSafe==1.1.1
+nltk==3.5
+oauthlib==3.1.0
+PySocks==1.7.1
+regex==2020.5.14
+requests==2.23.0
+requests-oauthlib==1.3.0
+six==1.14.0
+textblob==0.15.3
+tqdm==4.46.0
+tweepy==3.8.0
+urllib3==1.25.9
+Werkzeug==1.0.1
+wincertstore==0.2
